# rfidfyi-rs

./: Cargo.toml  README.md  demo.tape
src/: client.rs  types.rs
